attempt fix for iphone menu item wrap issue (#86)

--- a/src/components/atoms/buttons/SimpleButton.module.css
+++ b/src/components/atoms/buttons/SimpleButton.module.css
@@ -41,6 +41,10 @@
     text-transform: uppercase;
 }
 
+.buttonCaption.noWrap {
+    white-space: nowrap;
+}
+
 .buttonCaption + .buttonIcon {
     padding-left: 0.3rem;
 }
